--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <main class="main">
       <section class="hero-section section">
-        <div class="container flex-center">
+        <div class="container">
           <h1 class="hero-section__title">Effective Solutions for Your Business</h1>
           <button type="button" class="hero-section__btn">Order Service</button>
         </div>
@@ -117,7 +117,7 @@
       </section>
 
       <section class="our-team section">
-        <div class="container">
+        <div class="container our-team-container">
           <h2 class="our-team__title">Our Team</h2>
           <ul class="our-team__list">
             <li class="list__item">
@@ -455,7 +455,7 @@
       </div>
     </footer>
 
-    <div class="modal-overlay is-open">
+    <div class="modal-overlay "is-open>
       <div class="modal-wrapper">
         <button type="button" class="close-btn">
           <svg class="close-icon" width="8" height="8">
