add adaptive graphic for retina displays

--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
           <ul class="our-team__list">
             <li class="list__item">
               <img
+                srcset="./images/colleague1.jpg 1x, ./images/colleague1@2x.jpg 2x"
                 src="./images/colleague1.jpg"
                 alt="Mark Guerrero"
                 class="our-team__img"
@@ -170,6 +171,7 @@
             </li>
             <li class="list__item">
               <img
+                srcset="./images/colleague2.jpg 1x, ./images/colleague2@2x.jpg 2x"
                 src="./images/colleague2.jpg"
                 alt="Mark Guerrero"
                 class="our-team__img"
@@ -213,6 +215,7 @@
             </li>
             <li class="list__item">
               <img
+                srcset="./images/colleague3.jpg 1x, ./images/colleague3@2x.jpg 2x"
                 src="./images/colleague3.jpg"
                 alt="Mark Guerrero"
                 class="our-team__img"
@@ -256,6 +259,7 @@
             </li>
             <li class="list__item">
               <img
+                srcset="./images/colleague4.jpg 1x, ./images/colleague4@2x.jpg 2x"
                 src="./images/colleague4.jpg"
                 alt="Mark Guerrero"
                 class="our-team__img"
@@ -307,7 +311,13 @@
           <ul class="portfolio__list">
             <li class="list__item">
               <div class="overlay-wrapper">
-                <img width="360" height="300" src="./images/project6.jpg" alt="Banking App" />
+                <img
+                  srcset="./images/project6.jpg 1x, ./images/project6@2x.jpg 2x"
+                  src="./images/project6.jpg"
+                  width="360"
+                  height="300"
+                  alt="Banking App"
+                />
                 <p class="overlay-description">
                   14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                   Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -320,7 +330,13 @@
             </li>
             <li class="list__item">
               <div class="overlay-wrapper">
-                <img width="360" height="300" src="./images/project5.jpg" alt="Cashless Payment" />
+                <img
+                  srcset="./images/project5.jpg 1x, ./images/project5@2x.jpg 2x"
+                  src="./images/project5.jpg"
+                  width="360"
+                  height="300"
+                  alt="Cashless Payment"
+                />
                 <p class="overlay-description">
                   14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                   Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -333,7 +349,13 @@
             </li>
             <li class="list__item">
               <div class="overlay-wrapper">
-                <img width="360" height="300" src="./images/project4.jpg" alt="Meditation App" />
+                <img
+                  srcset="./images/project4.jpg 1x, ./images/project4@2x.jpg 2x"
+                  src="./images/project4.jpg"
+                  width="360"
+                  height="300"
+                  alt="Meditation App"
+                />
                 <p class="overlay-description">
                   14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                   Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -346,7 +368,13 @@
             </li>
             <li class="list__item">
               <div class="overlay-wrapper">
-                <img width="360" height="300" src="./images/project3.jpg" alt="Taxi Service" />
+                <img
+                  srcset="./images/project3.jpg 1x, ./images/project3@2x.jpg 2x"
+                  src="./images/project3.jpg"
+                  width="360"
+                  height="300"
+                  alt="Taxi Service"
+                />
                 <p class="overlay-description">
                   14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                   Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -360,9 +388,10 @@
             <li class="list__item">
               <div class="overlay-wrapper">
                 <img
+                  srcset="./images/project2.jpg 1x, ./images/project2@2x.jpg 2x"
+                  src="./images/project2.jpg"
                   width="360"
                   height="300"
-                  src="./images/project2.jpg"
                   alt="Screen Illustrations"
                 />
                 <p class="overlay-description">
@@ -377,7 +406,13 @@
             </li>
             <li class="list__item">
               <div class="overlay-wrapper">
-                <img width="360" height="300" src="./images/project1.jpg" alt="Online Courses" />
+                <img
+                  srcset="./images/project1.jpg 1x, ./images/project1@2x.jpg 2x"
+                  src="./images/project1.jpg"
+                  width="360"
+                  height="300"
+                  alt="Online Courses"
+                />
                 <p class="overlay-description">
                   14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                   Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
